Reduce storage required for indexing - fixes